Finally a fix for the vimeo scaling on mobile, ported solution to JSX

--- a/src/index.css
+++ b/src/index.css
@@ -131,9 +131,6 @@ a:hover{
 }
 
 .IFrameWrapper{
-  display: flex;
-  justify-content: center;
-  align-items: center;
   margin: 1em 0;
 }
 
